# IFJproject

./: .gitignore  CMakeLists.txt  Makefile  README.md  grammar.md  ifj-scanner.c  input.php  lex-anal.c  makefile  notes.md  odevzdani.sh
doc/: .gitignore  IFJ-definitiveStateMachine_8.drawio  Makefile  dokumentace.tex  sources.bib
src/: .gitignore  Makefile  ast.c  ast.h  code-gen-data.h  code-gen-static.c  code-gen.c  code-gen.h  code.ifjcode22  code_gen.c  code_gen.h  code_gen_static.c  code_gen_static.h  devel.c  devel.h  error-codes.h  error_codes.h  hashtable.c  hashtable.h  ifj-scanner.c  lex-anal.c  lex-anal.h  lex-analyzer.c  lex-analyzer.h  lex_analyzer.c  lex_analyzer.h  main.c  makefile  preced-analyzer-data.h  preced-analyzer.c  preced-analyzer.h  preced_analyzer.c  preced_analyzer.h  preced_analyzer_data.h  sem-analyzer.c  sem-analyzer.h  sem_analyzer.c  sem_analyzer.h  stack.c  stack.h  (+10 more)
tests/: test-ast.cpp  test-ast.hpp  test-code-gen.cpp  test-error-codes.cpp  test-error-codes.hpp  test-lex-anal.cpp  test-lex-anal.hpp  test-lex-analyzer.cpp  test-lex-analyzer.hpp  test-preced-analyzer.cpp  test-preced-analyzer.hpp  test-syn-anal.cpp  test-syn-analyzer.cpp  tests-main.cpp
xbielg00/: ast.c  code_gen.h  code_gen_static.h  error_codes.h  lex_analyzer.h  main.c  preced_analyzer.c  rozdeleni  sem_analyzer.c  sem_analyzer.h  stack.c  stack.h  symtable.h  syn_analyzer.c
